fake data các màn hình :
1.home
2.danh sách sản phẩm
3.chi tiết sản phẩm

--- a/FE/src/styles.less
+++ b/FE/src/styles.less
@@ -6534,7 +6534,7 @@ a.magnific-popup:hover .overlay {
 /* -- Testimonial Section
 --------------------------------------------------------------*/
 .testimonials-wrap{
-  background: url(src/assets/images/testimonial-bg.jpg);
+  background: url(src/assets/images/back.jpg);
   background-size: cover;
 }
 .testimonials-wrap .reviews-content{
