lên giao diện form login sign / sign up

--- a/FE/src/app/all-product/all-product.component.html
+++ b/FE/src/app/all-product/all-product.component.html
@@ -21,98 +21,98 @@
     <div class="row">
 
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Pastry</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item2.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Sprinkled Donuts</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item3.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Cupcake</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item4.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Pastry</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item2.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Sprinkled Donuts</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item3.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Cupcake</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item4.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item4.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-          <p>Cake - Pastries</p>
+          <p>VEGETABLE JUICE</p>
           <span class="price colored">$12</span>
         </div>
       </div>
