--- a/FE/src/app/best-product/best-product.component.html
+++ b/FE/src/app/best-product/best-product.component.html
@@ -5,34 +5,34 @@
       <div class="d-flex products-slider">
 
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item1.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/The-CPR-Drink.jpg"></a>
           <div class="text-comtent text-center text-hover">
-            <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Pastry</a></h5>
-            <p>Cake - Pastries</p>
+            <h5 class="pt-4"><a routerLink="/detail-product">The CPR Drink</a></h5>
+            <p>Vegetable juice</p>
             <span class="price colored">$12</span>
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item2.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Green-Magic.jpg"></a>
           <div class="text-comtent text-center text-hover">
-            <h5 class="pt-4"><a routerLink="/detail-product">Sprinkled Donuts</a></h5>
-            <p>Cake - Pastries</p>
+            <h5 class="pt-4"><a routerLink="/detail-product">Green Magic</a></h5>
+            <p>Vegetable juice</p>
             <span class="price colored">$12</span>
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item3.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Green-Orange-Punch.jpg"></a>
           <div class="text-comtent text-center text-hover">
-            <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Cupcake</a></h5>
-            <p>Cake - Pastries</p>
+            <h5 class="pt-4"><a routerLink="/detail-product">Green Orange Punch</a></h5>
+            <p>Vegetable juice</p>
             <span class="price colored">$12</span>
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/images/cake-item4.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
           <div class="text-comtent text-center text-hover">
-            <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
-            <p>Cake - Pastries</p>
+            <h5 class="pt-4"><a routerLink="/detail-product">Tangy Electrolyte Drink</a></h5>
+            <p>Vegetable juice</p>
             <span class="price colored">$12</span>
           </div>
         </div>
