--- a/FE/src/app/detail-product/detail-product.component.html
+++ b/FE/src/app/detail-product/detail-product.component.html
@@ -5,13 +5,13 @@
       <div class="row">
 
         <div class="col-md-6">
-          <a href="#" class="product-image"><img src="./assets/images/gallery-item2.jpg"></a>
+          <a href="#" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         </div>
 
         <div class="col-md-6 pl-5">
           <div class="product-detail">
-            <h5 class="pt-4"><a href="#">Black Forest Pastry</a></h5>
-            <p>Cake - Pastries</p>
+            <h5 class="pt-4"><a href="#">Tangy Electrolyte Drink</a></h5>
+            <p>VEGETABLE JUICE</p>
             <span class="price colored">$12</span>
 
             <p>
