--- a/FE/src/styles.less
+++ b/FE/src/styles.less
@@ -6645,8 +6645,8 @@ a.magnific-popup:hover .overlay {
 /* - Page Banner Section
 --------------------------------------------------------------*/
 .site-banner{
-  background: url(src/assets/images/banner.jpg) no-repeat;
-  height: 567px;
+  //background: url(assets/product/banner.jpg) no-repeat;
+  height: 267px;
 }
 .site-banner .banner-content {
   display: flex;
