--- a/FE/src/app/header/header.component.html
+++ b/FE/src/app/header/header.component.html
@@ -11,7 +11,7 @@
           <div class="header-top-right">
             <ul class="d-flex list-unstyled color-secondary">
               <li class="d-flex align-items-center mr-5"><i class="fs-4 pr-2 bi bi-person-circle"></i><a routerLink="/account">My Account</a></li>
-              <li class="d-flex align-items-center"><i class="fs-4 pr-2 bi bi-cart-plus"></i><a (click)="openCart()">Card <i class="color-red bi bi-2-circle-fill"></i></a></li>
+              <li class="d-flex align-items-center"><i class="fs-4 pr-2 bi bi-cart-plus"></i><a (click)="openCart()">Card</a></li>
             </ul>
           </div>
         </div>
