--- a/FE/src/app/detail-product/detail-product.component.html
+++ b/FE/src/app/detail-product/detail-product.component.html
@@ -15,15 +15,15 @@
             <span class="price colored">$12</span>
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
+              It's very important to have a patient, and it will be followed by an adipiscing process, but I'll give it that way
+              in time they occur as with great labor and pain. Over the years, I will come,
+              no one should practice any kind of work except to gain some benefit from it
+              consequence
             </p>
             <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Doubts or irure pain in reprimanding in pleasure wants to be
+              let no hair flee from pain Except they are not blinded by lust
+              they go forth, they are in fault who abandon their duties;
             </p>
 
             <label for="delivery-date">Delivery Date</label>
