--- a/FE/src/app/special-product/special-product.component.html
+++ b/FE/src/app/special-product/special-product.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-6 color-white">
           <h2 class="section-title color-white mb-4">
-            Our Special Chocolate Mousse
+            Chocolate Mousse
           </h2>
           <p>All of our products are made from scratch using family recipes with the highest quality ingredients. We bake and sell fresh daily to ensure only the best products are sold to our customers.</p>
 
