--- a/FE/src/app/header/header.component.html
+++ b/FE/src/app/header/header.component.html
@@ -37,10 +37,10 @@
             <div class="d-flex col-9">
               <div class="navbar-collapse collapse" id="slide-navbar-collapse">
               <ul class="navbar-nav list-inline text-uppercase">
-                <li class="nav-item text-hover active"><a href="index.html" class="nav-link" data-effect="Home">Home</a></li>
+                <li class="nav-item text-hover active"><a routerLink="/" class="nav-link" data-effect="Home">Home</a></li>
                 <li class="nav-item text-hover"><a routerLink="/about-us" class="nav-link" data-effect="About Us">About us</a></li>
-                <li class="nav-item text-hover"><a href="blog.html" class="nav-link" data-effect="Blogs">Blog</a></li>
-                <li class="nav-item text-hover"><a href="contact.html" class="nav-link" data-effect="Contact">Contact us</a></li>
+                <li class="nav-item text-hover"><a routerLink="/blog" class="nav-link" data-effect="Blogs">Blog</a></li>
+                <li class="nav-item text-hover"><a routerLink="/contact" class="nav-link" data-effect="Contact">Contact us</a></li>
 
                 <!--              <li class="nav-item dropdown">-->
                 <!--                <a href="#" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Pages</a>-->
