--- a/FE/src/app/routes/about-us/about-us.component.html
+++ b/FE/src/app/routes/about-us/about-us.component.html
@@ -20,7 +20,7 @@
               <div class="row">
 
                 <div class="col-md-6">
-                  <div class="product-image" style="background-image: url(src/assets/images/tabimg.jpg);background-size: cover;"></div>
+                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg.jpg);background-size: cover;"></div>
                 </div>
 
                 <div class="text-content col-md-6 bg-Peach p-5">
@@ -43,7 +43,7 @@
               <div class="row">
 
                 <div class="col-md-6">
-                  <div class="product-image" style="background-image: url(src/assets/images/tabimg1.jpg);background-size: cover;"></div>
+                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg1.jpg);background-size: cover;"></div>
                 </div>
 
                 <div class="text-content col-md-6 bg-Peach p-5">
@@ -64,7 +64,7 @@
               <div class="row">
 
                 <div class="col-md-6">
-                  <div class="product-image" style="background-image: url(src/assets/images/tabimg.jpg);background-size: cover;"></div>
+                  <div class="product-image" style="background-image: url(../../../assets/images/tabimg.jpg);background-size: cover;"></div>
                 </div>
 
                 <div class="text-content col-md-6 bg-Peach p-5">
