--- a/FE/src/app/routes/all-product/all-product.component.html
+++ b/FE/src/app/routes/all-product/all-product.component.html
@@ -6,7 +6,7 @@
           <div class="colored">
             <h1>Shop</h1>
             <div class="breadcum-items">
-              <span class="item"><a href="index.html">Home /</a></span>
+              <span class="item"><a href="../../../index.html">Home /</a></span>
               <span class="item colored">Shop</span>
             </div>
           </div>
@@ -21,7 +21,7 @@
     <div class="row">
 
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Pastry</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Sprinkled Donuts</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Cupcake</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Pastry</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Sprinkled Donuts</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Black Forest Cupcake</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="product-item col-md-3 pb-4">
-        <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+        <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         <div class="text-comtent text-center">
           <h5 class="pt-4"><a routerLink="/detail-product">Macarons with Berries</a></h5>
           <p>VEGETABLE JUICE</p>
