--- a/FE/src/app/routes/best-product/best-product.component.html
+++ b/FE/src/app/routes/best-product/best-product.component.html
@@ -5,7 +5,7 @@
       <div class="d-flex products-slider">
 
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/The-CPR-Drink.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/The-CPR-Drink.jpg"></a>
           <div class="text-comtent text-center text-hover">
             <h5 class="pt-4"><a routerLink="/detail-product">The CPR Drink</a></h5>
             <p>Vegetable juice</p>
@@ -13,7 +13,7 @@
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Green-Magic.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Green-Magic.jpg"></a>
           <div class="text-comtent text-center text-hover">
             <h5 class="pt-4"><a routerLink="/detail-product">Green Magic</a></h5>
             <p>Vegetable juice</p>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Green-Orange-Punch.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Green-Orange-Punch.jpg"></a>
           <div class="text-comtent text-center text-hover">
             <h5 class="pt-4"><a routerLink="/detail-product">Green Orange Punch</a></h5>
             <p>Vegetable juice</p>
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="product-item col-md-3 pl-0">
-          <a routerLink="/detail-product" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+          <a routerLink="/detail-product" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
           <div class="text-comtent text-center text-hover">
             <h5 class="pt-4"><a routerLink="/detail-product">Tangy Electrolyte Drink</a></h5>
             <p>Vegetable juice</p>
