--- a/FE/src/app/routes/detail-product/detail-product.component.html
+++ b/FE/src/app/routes/detail-product/detail-product.component.html
@@ -5,7 +5,7 @@
       <div class="row">
 
         <div class="col-md-6">
-          <a href="#" class="product-image"><img src="./assets/product/Tangy-Electrolyte-Drink.jpg"></a>
+          <a href="#" class="product-image"><img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg"></a>
         </div>
 
         <div class="col-md-6 pl-5">
