--- a/FE/src/app/routes/footer/footer.component.html
+++ b/FE/src/app/routes/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="wrap flex-container">
 
         <div class="col-md-3 footer-logo text-center mb-3">
-          <img src="./assets/images/28565132.jpg" style="width: 91%" class="mb-3">
+          <img src="../../../assets/images/28565132.jpg" style="width: 91%" class="mb-3">
           <p><span class="fw-bold">Adress:</span> 55 Giai phong Dong Tam Hai Ba Trung Ha Noi</p>
         </div>
 
