--- a/FE/src/app/routes/header/header.component.html
+++ b/FE/src/app/routes/header/header.component.html
@@ -30,7 +30,7 @@
             <div class="col-2">
               <div class="navbar-brand ">
                 <a routerLink="/">
-                  <img style="max-width: 75%" src="./assets/images/28565132.jpg">
+                  <img style="max-width: 75%" src="../../../assets/images/28565132.jpg">
                 </a>
               </div>
             </div>
