--- a/FE/src/app/routes/image-product/image-product.component.html
+++ b/FE/src/app/routes/image-product/image-product.component.html
@@ -4,48 +4,48 @@
     <div class="row">
       <div class="d-flex flex-wrap col-md-12">
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/The-CPR-Drink.jpg">
-            <img src="./assets/product/The-CPR-Drink.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/The-CPR-Drink.jpg">
+            <img src="../../../assets/product/The-CPR-Drink.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
           </a>
         </figure>
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/Tangy-Electrolyte-Drink.jpg">
-            <img src="./assets/product/Tangy-Electrolyte-Drink.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/Tangy-Electrolyte-Drink.jpg">
+            <img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
           </a>
         </figure>
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/Green-Orange-Punch.jpg">
-            <img src="./assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/Green-Orange-Punch.jpg">
+            <img src="../../../assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
           </a>
         </figure>
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/Green-Orange-Punch.jpg">
-            <img src="./assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/Green-Orange-Punch.jpg">
+            <img src="../../../assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
           </a>
         </figure>
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/Tangy-Electrolyte-Drink.jpg">
-            <img src="./assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/Tangy-Electrolyte-Drink.jpg">
+            <img src="../../../assets/product/Green-Orange-Punch.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
           </a>
         </figure>
         <figure class="col-md-4 mb-3 pl-0">
-          <a class="magnific-popup" href="./assets/product/The-CPR-Drink.jpg">
-            <img src="./assets/product/Tangy-Electrolyte-Drink.jpg" alt="cake" class="galleryImg">
+          <a class="magnific-popup" href="../../../assets/product/The-CPR-Drink.jpg">
+            <img src="../../../assets/product/Tangy-Electrolyte-Drink.jpg" alt="cake" class="galleryImg">
             <div class="overlay">
               <i class="icon icon-search-plus"></i>
             </div><!--imgOverlay-->
