--- a/FE/src/app/routes/testimonials/testimonials.component.html
+++ b/FE/src/app/routes/testimonials/testimonials.component.html
@@ -15,7 +15,7 @@
             </div>
             <p class="animated zoomIn">“Bakery is ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
             <div class="testimonial-author">
-              <img src="./assets/images/default.png" alt="jane">
+              <img src="../../../assets/images/default.png" alt="jane">
               <span class="name d-flex justify-content-center mt-3">Jane Marie</span>
             </div>
           </div><!--reviews-info-->
@@ -30,7 +30,7 @@
             </div>
             <p class="animated zoomIn">This is absolute best product adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
             <div class="testimonial-author">
-              <img src="./assets/images/default.png" alt="simran">
+              <img src="../../../assets/images/default.png" alt="simran">
               <span class="name d-flex justify-content-center mt-3">Simran</span>
             </div>
           </div><!--reviews-info-->
@@ -45,7 +45,7 @@
             </div>
             <p class="animated zoomIn">“I really love this product sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.”</p>
             <div class="testimonial-author">
-              <img src="./assets/images/default.png" alt="jane">
+              <img src="../../../assets/images/default.png" alt="jane">
               <span class="name d-flex justify-content-center mt-3">John Marie</span>
             </div>
           </div><!--reviews-info-->
