--- a/FE/src/app/routes/cart/cart.component.html
+++ b/FE/src/app/routes/cart/cart.component.html
@@ -7,7 +7,7 @@
 >
   <ng-container *nzDrawerContent>
     <div class="d-flex align-items-center flex-column">
-      <img src="assets/product/empty_cart.png">
+      <img src="../../../assets/product/empty_cart.png">
       <button (click)="closeDrawer()" routerLink="/" nzSize="large" nzShape="round" nz-button nzDanger>Keep buying</button>
     </div>
   </ng-container>
